Updated the css rule set for the 'modal-backdrop' class to set height and width properties to 100% to ensure modal completely covers background at responsive dimenstions. Updated alightment of reported icons on 'PostCard' component for visual appeal in all feeds. #33

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -56,6 +56,11 @@ body {
   margin-bottom: 1.5rem;
 }
 
+.modal-backdrop {
+  width: 100%;
+  height: 100%;
+}
+
 .feed-cont {
   max-width: 1200px;
 }
